--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 </head>
 <br />
 <div class="nav">
-    <a href="./Home.html">Home</a>
+    <a href="./index.html">Home</a>
     <a href="./Education.html">Education</a>
     <a href="./Work.html">Work</a>
     <a href="#">Contact</a>
