--- a/Education.html
+++ b/Education.html
@@ -28,7 +28,7 @@
 
 <body>
     <div class="nav">
-        <a href="./Home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="#">Education</a>
         <a href="./Work.html">Work</a>
         <a href="./Contact.html">Contact</a>
