--- a/Work.html
+++ b/Work.html
@@ -27,7 +27,7 @@
 </style>
 <body>
     <div class="nav">
-        <a href="./Home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./Education.html">Education</a>
         <a href="#">Work</a>
         <a href="./Contact.html">Contact</a>
